# qt-examples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.kiro/specs/qt-image-processor-widget-fix/: design.md  requirements.md  tasks.md
apps/: CMakeLists.txt
apps/calib/: CMakeLists.txt
apps/calib/src/: main.cpp
apps/codec/: CMakeLists.txt
apps/codec/src/: main.cpp  mainwindow.cpp  mainwindow.h
apps/colordetector/: CMakeLists.txt
apps/colordetector/src/: main.cpp
apps/databaseadmin/: CMakeLists.txt  README.md  SETUP.md  build.bat  run.bat  test_database.sql
apps/databaseadmin/src/: main.cpp  mainwindow.cpp  mainwindow.h
apps/databaseadmin/src/database/: databasemanager.cpp  databasemanager.h
apps/databaseadmin/src/delegates/: buttondelegate.cpp  buttondelegate.h  checkboxdelegate.cpp  checkboxdelegate.h
apps/databaseadmin/src/dialogs/: AddRecordDialog.cpp  AddRecordDialog.h
apps/databaseadmin/src/models/: tablemodel.cpp  tablemodel.h
apps/imagestorageservice/: CMakeLists.txt
apps/imagestorageservice/src/: main.cpp
apps/jsonconfigmanager/: CMakeLists.txt
apps/jsonconfigmanager/src/: mainwindow.cpp  mainwindow.h
apps/jsonconfigmanager/src/views/: ConfigDetailWidget.cpp  ConfigDetailWidget.h
apps/jsonconfigmanager/src/widgets/: EditableListWidget.cpp  EditableListWidget.h  SidebarWidget.cpp  SidebarWidget.h
apps/mdnsfinder/: CMakeLists.txt
apps/mdnsfinder/src/: main.cpp  mainwindow.cpp  mainwindow.h
apps/mytcpsocket/: CMakeLists.txt
apps/mytcpsocket/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/qtimagebrowser/: CMakeLists.txt  README.md
apps/qtimagebrowser/src/: mainwindow.cpp  mainwindow.h
apps/qtimageprocessor/: CMakeLists.txt  README.md  SIMPLIFICATION_SUMMARY.md
apps/qtimageprocessor/src/: algorithmfactory.cpp  algorithmfactory.h  algorithmparameters.cpp  algorithmparameters.h  algorithmparams.cpp  algorithmparams.h  bluralgorithm.cpp  bluralgorithm.h  brightnesscontrastalgorithm.cpp  brightnesscontrastalgorithm.h  edgedetectionalgorithm.cpp  edgedetectionalgorithm.h  grayscalealgorithm.cpp  grayscalealgorithm.h  imagealgorithm.cpp  imagealgorithm.h  imageprocessor.cpp  imageprocessor.h  imageprocessorwindow.cpp  imageprocessorwindow.h  main.cpp
apps/qtimageprocessor/src/factories/: ProcessorFactory.cpp  ProcessorFactory.h
apps/qtimageprocessor/src/interfaces/: IImageProcessor.h  IParams.h  IProcessorFactory.h
apps/qtimageprocessor/src/parameters/: BlurParams.cpp  BlurParams.h  BrightnessContrastParams.cpp  BrightnessContrastParams.h  EdgeDetectionParams.cpp  EdgeDetectionParams.h  GrayscaleParams.cpp  GrayscaleParams.h
apps/qtimageprocessor/src/processors/: BlurProcessor.cpp  BlurProcessor.h  BrightnessContrastProcessor.cpp  BrightnessContrastProcessor.h  EdgeDetectionProcessor.cpp  EdgeDetectionProcessor.h  GrayscaleProcessor.cpp  GrayscaleProcessor.h
apps/qtimageprocessor/src/services/: ImageProcessingService.cpp  ImageProcessingService.h
apps/qtimageviewer/: CMakeLists.txt
apps/qtimageviewer/src/: mainwindow.cpp
apps/qtoutlogger/: CMakeLists.txt
apps/showchart/: CMakeLists.txt
apps/showchart/src/: losschart.cpp  losschart.h  main.cpp
apps/showchart1/: CMakeLists.txt
apps/showchart1/src/: customchartview.cpp  customchartview.h  main.cpp
colordetector/: CMakeLists.txt
colordetector/src/: main.cpp
imagestorageservice/: CMakeLists.txt
imagestorageservice/src/: ImageStorageService.cpp  ImageStorageService.h  main.cpp
libs/: CMakeLists.txt
libs/imagestorageservice/: ImageStorageService.cpp  ImageStorageService.h
libs/simpleimageviewer/: SimpleImageViewer.cpp  SimpleImageViewer.h
qtimageviewer/: CMakeLists.txt
qtimageviewer/src/: imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h
qtoutlogger/: CMakeLists.txt
src/: imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h
