add_subdirectory(qtimageviewer)
add_subdirectory(qtoutlogger)
add_subdirectory(imagestorageservice)
add_subdirectory(colordetector)
add_subdirectory(qtimageprocessor)
add_subdirectory(qtimagebrowser)
add_subdirectory(codec)
add_subdirectory(jsonconfigmanager)
add_subdirectory(calib)
add_subdirectory(mytcpsocket)
